# view_vox_using_wgpu

./: Cargo.toml  README.md
src/: camera.rs  depth.rs  lib.rs  light.wgsl  main.rs  shader.wgsl
src/model/: mod.rs  vox.rs
